5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4384/executions/1793_1595.log
== TEST (2019-05-30 18:02:28) 
-- CODE:
from numpy import *
n=array(input("notas:"))
print(notas)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:02:58) 
-- CODE:
from numpy import *
n=array(input("notas:"))
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:03:27) 
-- CODE:
from numpy import *
n=array(input("notas:"))
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:04:39) 
-- CODE:
from numpy import *
n=array(input("notas:"))
media=size(n)
print(round(media))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:05:20) 
-- CODE:
from numpy import *
n=array(input("notas:"))
media=max(n)
print(round(media))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:10:30) 
-- CODE:
from numpy import *
n=array(input("notas:"))
media=sum(n)
print(round(2, media))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:11:25) 
-- CODE:
from numpy import *
n=avange(input("notas:"))
media=sum(n)
print(round(2, media))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:11:27) 
-- CODE:
from numpy import *
n=avange(input("notas:"))
media=sum(n)
print(round(2, media))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:11:48) 
-- CODE:
from numpy import *
n=array(eval(input("notas:"))
media=sum(n)
print(round(2, media))
-- ERROR:
File "XXXX", line 3
    media=sum(n)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:12:09) 
-- CODE:
from numpy import *
n=array(eval(input("notas:"))

print(round(2, media))
-- ERROR:
File "XXXX", line 4
    print(round(2, media))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:12:11) 
-- CODE:
from numpy import *
n=array(eval(input("notas:"))

print(round(2, media))
-- ERROR:
File "XXXX", line 4
    print(round(2, media))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:12:31) 
-- CODE:
from numpy import *
n=array(eval(input("notas:"))
print(round(2, n))
-- ERROR:
File "XXXX", line 3
    print(round(2, n))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:12:50) 
-- CODE:
from numpy import *
n=array(eval(input("notas:"))
print(round(n, 2))
-- ERROR:
File "XXXX", line 3
    print(round(n, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:13:15) 
-- CODE:
from numpy import *
n=array(eval(input("notas:"))
print(round(2, n))
-- ERROR:
File "XXXX", line 3
    print(round(2, n))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:16:43) 
-- CODE:
from numpy import *
n=array(eval(input("notas:"))
print(n)
-- ERROR:
File "XXXX", line 3
    print(n)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:16:49) 
-- CODE:
from numpy import *
n=array(eval(input("notas:"))
print(n)
-- ERROR:
File "XXXX", line 3
    print(n)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:16:53) 
-- CODE:
from numpy import *
n=array(eval(input("notas:"))
print(n)
-- ERROR:
File "XXXX", line 3
    print(n)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:17:15) 
-- CODE:
from numpy import *
al=array(eval(input("notas:"))
print(al)
-- ERROR:
File "XXXX", line 3
    print(al)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:17:38) 
-- CODE:
from numpy import *
al=array(eval(input("notas:")))
print(al)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:17:56) 
-- CODE:
from numpy import *
al=array(eval(input("notas:")))
print(al)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:18:32) 
-- CODE:
from numpy import *
al=array(eval(input("notas:")))
media=size(n)
print(al)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:18:51) 
-- CODE:
from numpy import *
al=array(eval(input("notas:")))
media=max(n)
print(al)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:19:05) 
-- CODE:
from numpy import *
al=array(eval(input("notas:")))
media=max(al)
print(al)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:19:33) 
-- CODE:
from numpy import *
al=array(eval(input("notas:")))
media=max(al)
print(media)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:19:59) 
-- CODE:
from numpy import *
al=array(eval(input("notas:")))
media=size(al)
print(media)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:20:41) 
-- CODE:
from numpy import *
al=array(eval(input("notas:")))
media=sum(al)/size(al)
print(media)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:21:15) 
-- CODE:
from numpy import *
al=array(eval(input("notas:")))
media=sum(al)/size(al)
print(round(media ,2)
-- ERROR:
File "XXXX", line 5
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:21:23) 
-- CODE:
from numpy import *
al=array(eval(input("notas:")))
media=sum(al)/size(al)
print(round(media,2)
-- ERROR:
File "XXXX", line 5
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:21:31) 
-- CODE:
from numpy import *
al=array(eval(input("notas:")))
media=sum(al)/size(al)
print(round(media,2)
-- ERROR:
File "XXXX", line 5
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:21:44) 
-- CODE:
from numpy import *
al=array(eval(input("notas:")))
media=sum(al)/size(al)
print(round(2, media)
-- ERROR:
File "XXXX", line 5
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:21:49) 
-- CODE:
from numpy import *
al=array(eval(input("notas:")))
media=sum(al)/size(al)
print(round(2, media))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:22:06) 
-- CODE:
from numpy import *
al=array(eval(input("notas:")))
media=sum(al)/size(al)
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:25:48) 
-- CODE:
from numpy import *
al=array(eval(input("notas:")))
media=sum(al)-min(al)/size(al)
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:26:46) 
-- CODE:
from numpy import *
al=array(eval(input("notas:")))
media=(sum(al)-min(al))/size(al)
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:29:06) 
-- CODE:
from numpy import *
al=array(eval(input("notas:")))
x=al-min(al)
media=x/size(al)
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:30:15) 
-- CODE:
from numpy import *
al=array(eval(input("notas:")))
media=(sum(al)-min(al))/size(al)
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:38:51) 
-- CODE:
from numpy import *
al=array(eval(input("notas:")))
x=del,2(al)
print(x)

-- ERROR:
File "XXXX", line 3
    x=del,2(al)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:48:45) 
-- CODE:
from numpy import *
al=array(eval(input("notas:")))
x=sort(al)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:49:29) 
-- CODE:
from numpy import *
al=array(eval(input("notas:")))
x=sort(al)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:50:24) 
-- CODE:
from numpy import *
al=array(eval(input("notas:")))
x=sort(al)
c=x[0:4]
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:51:27) 
-- CODE:
from numpy import *
al=array(eval(input("notas:")))
x=sort(al)
c=x[1:4]
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:52:15) 
-- CODE:
from numpy import *
al=array(eval(input("notas:")))
x=sort(al)
c=x[1:4]
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:53:40) 
-- CODE:
from numpy import *
al=array(eval(input("notas:")))
x=sort(al)
c=x[1:4]
a=sum(x)/size(x)
print(round(a,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:54:44) 
-- CODE:
from numpy import *
al=array(eval(input("notas:")))
x=sort(al)
c=x[1:4]
a=sum(c)/size(c)
print(round(a,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:58:36) 
-- CODE:
from numpy import *
al=array(eval(input("notas:")))
x=sort(al)
c=x[1:4]
a=sum(c)/size(c)
print(round(a,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:02:30) 
-- CODE:
from numpy import *
al=array(eval(input("notas:")))
x=sort(al)
c=x[1:4]
a=sum(c)
print(c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:03:39) 
-- CODE:
from numpy import *
al=array(eval(input("notas:")))
x=sort(al)
c=x[1:4]
a=sum(c)
print(c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:04:24) 
-- CODE:
from numpy import *
al=array(eval(input("notas:")))
x=sort(al)
c=x[1:5]
a=sum(c)
print(c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:04:37) 
-- CODE:
from numpy import *
al=array(eval(input("notas:")))
x=sort(al)
c=x[1:5]
a=sum(c)/size(c)
print(round(a,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:05:06) 
-- CODE:
from numpy import *
al=array(eval(input("notas:")))
x=sort(al)
c=x[1:5]
a=sum(c)/size(c)
print(round(a,2))
-- EXECUTION TIME:
0.444396
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
2.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
3.25
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
2.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
